# melancholy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  github-pages-rust-doc.yaml  rust-ci.yaml
src/: cli.rs  main.rs  ssg.rs
