[package]
name = "melancholy"
description = "Static Site Generator"
version = "0.1.0"
edition = "2021"
authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/letsbuilda/melancholy"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["cargo"] }
clap_complete = "4.0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
figment = { version = "0.10.8", features = ["env", "toml"] }
dirs = "4.0.0"
